--- a/PingPong/Pages/Index.cshtml
+++ b/PingPong/Pages/Index.cshtml
@@ -7,4 +7,5 @@
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <p>We are trying to create some CI/CD pipelines, so you can find here some unnecessary updates, just for triggering workflow :)</a>.</p>
 </div>
